added dynamic version

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [build-system]
-requires = ["setuptools>=80.9", "wheel"]
+requires = ["setuptools>=80.9", "wheel", "setuptools-scm"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "pyairahome"
-version = "0.2.0"
+dynamic = ["version"]
 description = "PyAiraHome is a comprehensive Python library that provides both cloud-based and Bluetooth Low Energy (BLE) connectivity to Aira Home heat pump systems."
 readme = "README.md"
 license = "Apache-2.0"
@@ -73,3 +73,7 @@ python_version = "3.8"
 warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = true
+
+[tool.setuptools_scm]
+# Get version from git tags
+write_to = "pyairahome/_version.py"
