--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ dependencies = [
     "protobuf>=6.31.1",
     "bleak>=1.0.1",
     "cryptography>=45.0.5",
+    "bleak-retry-connector>=4.4.3"
 ]
 
 [project.urls]
